--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,60 @@
-:root{
-    --emerald: #3F6634;
-    --josh: #345511;
-    --may: #B0FE76;
-    --rupert: #81E979;
-    --lily: #7ebca7;
-}
-
-*{
-    margin: 0;
-}
-
-body{
-    font-family: "Roboto", sans-serif;
-}
-
-h1{
+h1 {
+    text-align: center;
     font-size: 4rem;
     line-height: 104px;
 }
-
-h2{
-    font-size: 2.5rem;
-    line-height: 56px;
+body {
+    color: black;
+    font-family: "Roboto", sans-serif;
+    text-align: justify;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+.img-left {
+    float: left;
+    margin-right: 10px;
+    max-width: 30%;
+    border-radius: 12px;
+}
+.content {
+    display: flex;
+    justify-content: flex-start;
+    align-items:center;
+    gap: 20px;
+}
+.content-box, .content, .content-second {
+    background-color: #f0f0f0; /* Grigio chiaro come sfondo */
+    border: 1px solid #d3d3d3; /* Bordo grigio chiaro */
+    padding: 15px; /* Padding per dare spazio interno */
+    margin-bottom: 20px; /* Spazio tra i rettangoli */
 }
 
-h3{
-    font-size: 1.5rem;
-    line-height: 32px;
+.content p {
+    flex: 1;
+    margin-right: 20px; 
 }
-
-h4{
-    font-size: 1.25rem;
-    line-height: 24px;
+.img-right {
+    max-width: 30%;
+    margin-bottom: 20px;
+    border-radius: 12px;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p{
-    color: var(--josh);
-    font-weight: normal;
+.content-second {
+    display: flex;
+    align-items: center; 
+    margin-top: 20px;
+}
+.content-second img {
+    max-width: 30%; 
+}
+.content-second p {
+    margin-left: 20px;
+    flex: 1;
+}
+.img-costum {
+    width: 15%;
+    height: auto; 
+    margin-bottom: 20px;
+    border-radius: 12px;
 }
 
 a,
@@ -83,12 +95,7 @@ nav{
     color: var(--lily);
 }
 
-.safe-area{
-    max-width: 1200px;
-    width: 90vw;
-    margin-inline: auto;
-    min-height: 100vh;
-}
+
 
 .spaced-column{
     display: flex;
@@ -96,93 +103,32 @@ nav{
     justify-content: space-between;
 }
 
-.content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.content > :not(:last-child){
-    margin-bottom: 2rem;
-}
-
-.main-image{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    display: block;
-}
-
-.full-width-img{
-    width: 100%;
-}
-
-.title-block{
-    width: 100%;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-}
-
-.title-block h1{
-    margin-bottom: 1rem;
-}
-
-.title-block h3{
-    letter-spacing: 3px;
-    font-weight: bold;
-}
-
-.footer{
-    font-size: large;
-    padding-top: 2em;
-    padding-bottom: 2em;
-    color: var(--lily);
-    position: relative;
-}
-
-.footer::after{
-    content: "";
-    position: absolute;
-    width: 120px;
-    height: 2px;
-    top: 50%;
-    margin-left: 10px;
-    background-color: var(--rupert);
-}
-
 .toggler{
     opacity: 0;
 }
 
 
-@media (max-width: 1200px){
-    .safe-area{
-        padding-inline: 1.5rem;
-    }
-}
-
-@media (max-width: 768px){
-    h1{
+@media (max-width: 768px) {
+    h1 {
         font-size: 2.5rem;
         line-height: 44px;
     }
-    
-    h2{
+
+    h2 {
         font-size: 2rem;
         line-height: 40px;
     }
-   
-    h3{
+
+    h3 {
         font-size: 1.125rem;
         line-height: 24px;
     }
-    
-    .title-block{
+
+    .title-block {
         margin-top: 0;
     }
 
-    .toggler{
+    .toggler {
         opacity: 0;
         z-index: 3;
         display: block;
@@ -190,8 +136,8 @@ nav{
         width: 30px;
         height: 10px;
     }
-    
-    .hamburger{
+
+    .hamburger {
         position: absolute;
         right: 0;
         z-index: 2;
@@ -203,14 +149,14 @@ nav{
         justify-content: flex-end;
     }
 
-    .hamburger > div{
+    .hamburger > div {
         position: relative;
         width: 100%;
         height: 3px;
         background-color: var(--rupert);
     }
 
-    .hamburger > div:before{
+    .hamburger > div:before {
         content: "";
         position: absolute;
         top: -10px;
@@ -219,31 +165,31 @@ nav{
         height: 3px;
     }
 
-    .toggler:checked{
+    .toggler:checked {
         height: 30px;
     }
 
-    .toggler:checked + .hamburger > div{
+    .toggler:checked + .hamburger > div {
         transform: rotate(135deg);
         position: absolute;
         top: 0;
     }
 
-    .toggler:checked + .hamburger > div:before{
-        transform: rotate(90deg) ;
+    .toggler:checked + .hamburger > div:before {
+        transform: rotate(90deg);
         top: 0;
     }
 
-    .toggler:checked ~ .menu{
+    .toggler:checked ~ .menu {
         display: flex;
         z-index: 1;
     }
 
-    nav{
+    nav {
         position: relative;
     }
 
-    nav .menu{
+    nav .menu {
         position: fixed;
         height: 100%;
         width: 100vw;
@@ -257,3 +203,17 @@ nav{
         transform: translate(-50%, -50%);
     }
 }
+@media (max-width: 1200px) {
+    .safe-area {
+        padding-inline: 1.5rem;
+    }
+}
+.toggler{
+    opacity: 0;
+    z-index: 3;
+    display: block;
+    cursor: pointer;
+    width: 30px;
+    height: 10px;
+}
+
