--- a/index.css
+++ b/index.css
@@ -1,5 +1,387 @@
-.title_index{
-    margin-top: 1 rem;
+/* Colori di base */
+:root {
+    --c1 : #343D90;
+    --c2 : #23164D;
+    --c3 : #2D286E;
+    --c4 : #FCFCFC;
+    --c5 : #C58F83;
+    --c6 : #D39888;
+    --c7 : #F1CFB8;
+    --c8: #B8706E;
+    --c9: #925B52;
+}
+/* Reset globale */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Georgia", serif; /* Cambiato il font a Georgia */
+    line-height: 1.5;
+    background-color: #f9f9f9; /* Un colore di sfondo chiaro per far risaltare i contenuti */
+}
+
+/* Titoli */
+h1, h2, h3, h4, h5, h6 {
+    color: var(--josh);
+    font-weight: normal;
+}
+
+/* Dimensioni specifiche dei titoli */
+h1 {
+    font-size: 4rem;
+    line-height: 104px;
+}
+
+h2 {
+    font-size: 2.5rem;
+    line-height: 56px;
+}
+
+h3 {
+    font-size: 1.5rem;
+    line-height: 32px;
+}
+
+h4 {
+    font-size: 1.25rem;
+    line-height: 24px;
+}
+
+/* Paragrafi */
+p {
+    color: black;
+    text-align: justify;
+    margin-bottom: 1rem; /* Margine tra i paragrafi */
+}
+
+/* Link */
+a,
+a:visited,
+a:focus {
+    text-decoration: none;
+    color: var(--josh);
+}
+
+/* Logo */
+.logo {
+    font-size: 1.5rem;
+    line-height: 32px;
+    font-weight: bold;
+    color: var(--josh);
+}
+
+/* Navigazione */
+nav {
+    display: flex;
+    height: 80px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3rem;
+    flex-wrap: wrap;
+}
+
+nav .menu {
+    display: flex;
+    justify-content: space-between;
+    width: 40%;
+    gap: 1rem; /* Maggiore spazio tra gli elementi del menu */
+}
+
+nav .active {
+    font-weight: bold;
+    color: var(--lily);
+}
+
+/* Area sicura */
+.safe-area {
+    max-width: 1200px;
+    width: 90vw;
+    margin-inline: auto;
+    min-height: 100vh;
+    padding: 0 1.5rem; /* Aggiunto padding per una migliore esperienza mobile */
+}
+
+/* Layout flex per il contenuto */
+.spaced-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.content > :not(:last-child) {
     margin-bottom: 2rem;
+}
+
+/* Immagine principale */
+.main-image {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+/* Blocchi di titolo (Aggiornato per essere più naturali e morbidi) */
+.section-container {
+    background-color: #F0F0F0; /* Grigio uniforme */
+    border: 1px solid #D3D3D3; /*  Bordo grigio */
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+.title_index {
+    font-size: 2.5em;
+    font-weight: bold;
+    color: var(--josh);
+    margin-bottom: 15px;
+    text-align: center; /* Centra i titoli */
+    font-family: "Georgia", serif; /* Font uniforme a Georgia */
+}
+
+footer {
+    font-size: large;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    color: var(--lily);
+    position: relative;
+    background: var(--footer-gradient);
+    color: white;
+    text-align: justify;
+    width: 1000%; /* Assicurati che il footer occupi tutta la larghezza dello schermo */
+    margin: 0; /* Rimuovi eventuali margini */
+    padding: 0; /* Rimuovi padding se presente */
+}
+
+
+footer::after {
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 2px;
+    top: 50%;
+    margin-left: 10px;
+}
+/* Footer */
+.footer {
+    background-color: #333333; /* Colore di sfondo scuro */
+    color: #f4f4f4; /* Colore chiaro per il testo */
+    padding: 40px 0; /* Aumento dello spazio */
+    text-align: center;
+    font-family: 'Georgia', serif; /* Font classico */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombra morbida per la profondità */
+    border-top: 2px solid #444444; /* Linea superiore per separare il footer dal contenuto */
+    width: 100%; /* Assicurarsi che il footer copra tutta la larghezza dello schermo */
+    margin: 0; /* Rimuovi margine */
+}
+
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/* Testo del footer */
+.footer p {
+    margin: 0; /* Rimuovi il margine dai paragrafi */
+    font-size: 16px; /* Dimensione del font leggermente ridotta */
+    color: #f4f4f4; /* Colore chiaro per il testo */
+    letter-spacing: 1px; /* Distanza tra le lettere per la leggibilità */
+}
+
+/* Link nel footer */
+.footer-link a {
+    color: #3498db; /* Colore dei link chiaro (blu) */
+    text-decoration: none; /* Rimuovi la sottolineatura */
+    font-weight: bold; /* Font più audace */
+    font-size: 14px; /* Dimensione del font più piccola */
+    letter-spacing: 1px; /* Distanza tra le lettere */
+    transition: color 0.3s ease, transform 0.3s ease, letter-spacing 0.3s ease; /* Transizioni per l'effetto hover */
+}
+
+
+.footer-link a:hover {
+    color: #2c3e50; /* Colore più scuro al passaggio del mouse */
+    transform: scale(1.1); /* Leggero ingrandimento del testo */
+    letter-spacing: 2px; /* Maggiore distanza tra le lettere al passaggio del mouse */
+}
+
+/* Design reattivo per dispositivi mobili e tablet */
+@media (max-width: 1200px) {
+    .safe-area {
+        padding-inline: 1.5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    /* Dimensioni dei font */
+    h1 {
+        font-size: 2.5rem;
+        line-height: 44px;
+    }
+    
+    h2 {
+        font-size: 2rem;
+        line-height: 40px;
+    }
+   
+    h3 {
+        font-size: 1.125rem;
+        line-height: 24px;
+    }
+
+    /* Blocco del titolo */
+    .title-block {
+        margin-top: 0;
+    }
+
+    /* Commutatore del menu mobile */
+    .toggler {
+        opacity: 0;
+        z-index: 3;
+        display: block;
+        cursor: pointer;
+        width: 30px;
+        height: 10px;
+    }
+    
+    .hamburger {
+        position: absolute;
+        right: 0;
+        z-index: 2;
+        width: 30px;
+        height: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    .hamburger > div {
+        position: relative;
+        width: 100%;
+        height: 3px;
+        background-color: var(--rupert);
+    }
+
+    .hamburger > div:before {
+        content: "";
+        position: absolute;
+        top: -10px;
+        background-color: var(--rupert);
+        width: 100%;
+        height: 3px;
+    }
+
+    .toggler:checked {
+        height: 30px;
+    }
+
+    .toggler:checked + .hamburger > div {
+        transform: rotate(135deg);
+        position: absolute;
+        top: 0;
+    }
+
+    .toggler:checked + .hamburger > div:before {
+        transform: rotate(90deg);
+        top: 0;
+    }
+
+    /* Visibilità del menu con il toggle */
+    .toggler:checked ~ .menu {
+        display: flex;
+        z-index: 1;
+    }
+
+    /* Menu di navigazione su mobile */
+    nav {
+        position: relative;
+    }
+
+    nav .menu {
+        position: fixed;
+        height: 100%;
+        width: 100vw;
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 50%;
+        left: 50%;
+        background-color: white;
+        transform: translate(-50%, -50%);
+    }
+}
+
+header.hero {
+    background-color: #f4f4f4; /* Colore di sfondo chiaro per l'header */
+    background-image: url('./assets/vintage-texture.png'); /* Immagine di sfondo con texture vintage */
+    background-size: cover; /* Fa sì che l'immagine di sfondo copra tutta l'area */
+    background-position: center; /* Posiziona l'immagine al centro */
+    height: 60vh; /* Altezza dell'header */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%; /* Assicurarsi che l'header copra tutta la larghezza dello schermo */
+    color: #333; /* Colore scuro per il testo */
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); /* Ombra leggera per profondità */
+    z-index: 0;
+    margin: 0; /* Rimuovi eventuali margini */
+    padding: 0; /* Rimuovi padding se presente */
+}
+
+
+/* Sovrapposizione scura per miglior contrasto */
+.hero-content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3); /* Sovrapposizione trasparente scura */
+    z-index: -1;
+}
+
+/* Contenuto Hero */
+.hero-content {
+    text-align: center;
+    z-index: 2;
+}
+
+/* Logo */
+.hero .logo a {
+    font-size: 2.5rem; /* Grandezza del logo ridotta */
+    color: #333; /* Colore scuro per il logo */
+    font-weight: 700;
+    text-decoration: none;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.hero .logo a:hover {
+    color: #3498db; /* Colore luminoso al passaggio del mouse */
+    transform: scale(1.1); /* Leggera animazione */
+}
+
+/* Menu */
+.hero .menu {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem; /* Distanza più contenuta */
+    gap: 1.5rem; /* Distanza tra i menu item più ridotta */
 }
 
