--- a/index.css
+++ b/index.css
@@ -575,7 +575,7 @@ header.hero {
 }
 
 
-/*qui inizia css pate*/
+/*QUI INIZIA CSS PATE*/
 /* Blocchi di titolo (Aggiornato per essere più naturali e morbidi) */
 .section-container {
     background-color: #F0F0F0; /* Grigio uniforme */
