--- a/Curiosità.css
+++ b/Curiosità.css
@@ -1,75 +1,38 @@
-:root{
-    --emerald: #0e0e0ef6;
-    --josh: #000000;
-    --may: #B0FE76;
-    --rupert: #81E979;
-    --lily: #7ebca7;
+:root {
+    --primary: #343D90; /* Dark Blue */
+    --secondary: #23164D; /* Deep Purple */
+    --accent: #2D286E; /* Dark Purple */
+    --background: #FCFCFC; /* Light Grey */
+    --light-accent: #C58F83; /* Light Brown */
+    --highlight: #D39888; /* Peachy Pink */
+    --soft-accent: #F1CFB8; /* Soft Beige */
+    --highlight-dark: #B8706E; /* Muted Red */
+    --secondary-dark: #925B52; /* Brown */
 }
 
-*{
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Georgia", serif; /* Modifica il font a Georgia */
 }
 
-body{
-    font-family: "Roboto", sans-serif;
+body {
+    background-color: #f5f5f5;
+    color: var(--josh);
 }
 
-h1{
-    font-size: 4rem;
-    line-height: 104px;
-}
-
-h2{
-    font-size: 2.5rem;
-    line-height: 56px;
-}
-
-h3{
-    font-size: 1.5rem;
-    line-height: 32px;
-}
-
-h4{
-    font-size: 1.25rem;
-    line-height: 24px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p{
+h1, h2, h3, h4, h5, h6, p {
     color: var(--josh);
     font-weight: normal;
 }
 
-a,
-a:visited,
-a:focus{
+a, a:visited, a:focus {
     text-decoration: none;
     color: var(--josh);
 }
 
-.logo{
-    font-size: 1.5rem;
-    line-height: 32px;
-}
-
-nav .logo{
-    font-weight: bold;
-    color: var(--josh);
-}
-
-nav .menu{
-    display: flex;
-    width: 40%;
-    justify-content: space-between;
-    flex-direction: row;
-}
-
-nav{
+.nav {
     display: flex;
     height: 80px;
     flex-direction: row;
@@ -78,187 +41,538 @@ nav{
     align-items: center;
 }
 
-.active{
+nav .logo {
+    font-weight: bold;
+    color: var(--josh);
+    font-size: 1.5rem;
+}
+
+nav .menu {
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.active {
     font-weight: bold;
     color: var(--lily);
 }
 
-.safe-area{
-    max-width: 1200px;
-    width: 90vw;
-    margin-inline: auto;
-    min-height: 100vh;
-}
-
-.spaced-column{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.content > :not(:last-child){
-    margin-bottom: 2rem;
-}
-
-.main-image{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    display: block;
-}
-
-.full-width-img{
-    width: 100%;
-}
-
-.title-block{
-    width: 100%;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-}
-
-.title-block h1{
-    margin-bottom: 1rem;
-}
-
-.title-block h3{
-    letter-spacing: 3px;
-    font-weight: bold;
-}
-
-.footer{
+footer {
     font-size: large;
     padding-top: 2em;
     padding-bottom: 2em;
     color: var(--lily);
     position: relative;
+    background: var(--footer-gradient);
+    color: white;
+    text-align: center;
 }
 
-.footer::after{
+footer::after {
     content: "";
     position: absolute;
     width: 120px;
     height: 2px;
     top: 50%;
     margin-left: 10px;
-    background-color: var(--rupert);
-}
-
-.toggler{
-    opacity: 0;
 }
 
 
-@media (max-width: 1200px){
-    .safe-area{
-        padding-inline: 1.5rem;
+/* Corpo della pagina */
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #f4f4f4; /* Colore chiaro di sfondo per la pagina */
+    color: #333; /* Colore scuro per il testo */
+    margin: 0;
+    padding: 0;
+}
+
+/* Hero Section */
+header.hero {
+    background-color: #f4f4f4; /* Colore di sfondo chiaro per l'header */
+    background-image: url('./assets/vintage-texture.png'); /* Immagine di sfondo con texture vintage */
+    background-size: cover; /* Fa sì che l'immagine di sfondo copra tutta l'area */
+    background-position: center; /* Posiziona l'immagine al centro */
+    height: 60vh; /* Altezza dell'header */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: #333; /* Colore scuro per il testo */
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); /* Ombra leggera per profondità */
+    z-index: 0;
+}
+
+/* Sovrapposizione scura per miglior contrasto */
+.hero-content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3); /* Sovrapposizione trasparente scura */
+    z-index: -1;
+}
+
+/* Contenuto Hero */
+.hero-content {
+    text-align: center;
+    z-index: 2;
+}
+
+/* Logo */
+.hero .logo a {
+    font-size: 2.5rem; /* Grandezza del logo ridotta */
+    color: #333; /* Colore scuro per il logo */
+    font-weight: 700;
+    text-decoration: none;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.hero .logo a:hover {
+    color: #3498db; /* Colore luminoso al passaggio del mouse */
+    transform: scale(1.1); /* Leggera animazione */
+}
+
+/* Menu */
+.hero .menu {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem; /* Distanza più contenuta */
+    gap: 1.5rem; /* Distanza tra i menu item più ridotta */
+}
+
+.menu-item {
+    font-size: 1.1rem; /* Dimensione del font ridotta */
+    color: #333; /* Colore scuro per il testo */
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1px;
+    transition: all 0.3s ease;
+    position: relative;
+}
+
+.menu-item::after {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #3498db; /* Colore sottolineatura */
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.3s ease;
+}
+
+.menu-item:hover {
+    color: #3498db; /* Colore luminoso al passaggio del mouse */
+}
+
+.menu-item:hover::after {
+    transform: scaleX(1); /* Effetto di sottolineatura dinamica */
+}
+
+/* Menu item attivo */
+.menu-item.active {
+    color: #3498db; /* Colore per l'elemento attivo */
+    font-weight: 700;
+}
+
+/* Sezione con contenuti principali */
+.testo-principale {
+    padding: 2rem;
+    background-color: #f4f4f4; /* Colore di sfondo chiaro */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Ombra morbida per la profondità */
+    border-radius: 12px;
+    max-width: 900px;
+    margin: 3rem auto;
+    text-align: center;
+    background-image: url('./assets/vintage-texture.png'); /* Immagine di sfondo con texture vintage */
+    background-size: cover; /* Assicura che l'immagine copra l'intera sezione */
+    position: relative; /* Necessario per il posizionamento della sovrapposizione */
+}
+ 
+/* Footer */
+.footer {
+    background-color: #333333; /* Colore di sfondo scuro */
+    color: #f4f4f4; /* Colore chiaro per il testo */
+    padding: 40px 0; /* Aumento dello spazio */
+    text-align: center;
+    font-family: 'Georgia', serif; /* Font classico */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombra morbida per la profondità */
+    border-top: 2px solid #444444; /* Linea superiore per separare il footer dal contenuto */
+}
+
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/* Testo del footer */
+.footer p {
+    margin: 0; /* Rimuovi il margine dai paragrafi */
+    font-size: 16px; /* Dimensione del font leggermente ridotta */
+    color: #f4f4f4; /* Colore chiaro per il testo */
+    letter-spacing: 1px; /* Distanza tra le lettere per la leggibilità */
+}
+
+/* Link nel footer */
+.footer-link a {
+    color: #3498db; /* Colore dei link chiaro (blu) */
+    text-decoration: none; /* Rimuovi la sottolineatura */
+    font-weight: bold; /* Font più audace */
+    font-size: 14px; /* Dimensione del font più piccola */
+    letter-spacing: 1px; /* Distanza tra le lettere */
+    transition: color 0.3s ease, transform 0.3s ease, letter-spacing 0.3s ease; /* Transizioni per l'effetto hover */
+}
+
+.footer-link a:hover {
+    color: #2c3e50; /* Colore più scuro al passaggio del mouse */
+    transform: scale(1.1); /* Leggero ingrandimento del testo */
+    letter-spacing: 2px; /* Maggiore distanza tra le lettere al passaggio del mouse */
+}
+
+
+.testo-principale h3 {
+    font-size: 2.5rem;
+    color: #333; /* Colore scuro per il titolo */
+}
+
+.testo-principale p {
+    font-size: 1.125rem;
+    color: #333; /* Colore del testo */
+    line-height: 1.8;
+    font-weight: 300;
+    margin-top: 1.5rem;
+}
+
+
+/* Main Content Styles */
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem auto;
+    max-width: 1200px;
+    padding: 2rem;
+    background-color: white;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.testo-principale h3 {
+    font-size: 2.5rem;
+    color: var(--josh);
+    text-align: center;
+}
+
+.testo-principale h4 {
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+    text-align: justify;
+    color: var(--josh);
+}
+
+.disegno-lista {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.disegno-lista img.main-img {
+    width: 45%;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.lista {
+    list-style-type: none;
+    padding-left: 0;
+    width: 45%;
+}
+
+.lista li {
+    margin-bottom: 2rem;
+}
+
+.list-item {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--josh);
+    font-size: 1.2rem;
+    transition: all 0.3s ease-in-out;
+}
+
+.list-item:hover {
+    color: var(--may);
+    transform: scale(1.05);
+}
+
+.list-item .icon {
+    width: 40px;
+    height: auto;
+    margin-right: 1rem;
+    transition: transform 0.3s ease-in-out;
+}
+
+.list-item:hover .icon {
+    transform: rotate(20deg);
+}
+
+.descrizione {
+    font-size: 1rem;
+    color: var(--lily);
+    margin-top: 0.5rem;
+    display: none;
+}
+
+.list-item:hover + .descrizione {
+    display: block;
+}
+
+.componenti-esperia {
+    margin-top: 3rem;
+    text-align: center;
+}
+
+.componenti-esperia h2 {
+    font-size: 2.5rem;
+    color: var(--josh);
+    margin-bottom: 1rem;
+}
+
+.componenti-esperia h4 {
+    font-size: 1.2rem;
+    color: var(--josh);
+    margin-bottom: 2rem;
+}
+
+/* Testimonials Section */
+.testimonials {
+    margin-top: 4rem;
+    text-align: center;
+}
+
+.testimonials h2 {
+    font-size: 2.5rem;
+    color: var(--josh);
+}
+
+.testimonials-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2rem;
+}
+
+.testimonial {
+    background: linear-gradient(135deg, #7ebca7, #2c3e50);
+    padding: 2rem;
+    width: 45%;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.testimonial h4 {
+    font-size: 1.25rem;
+    color: var(--josh);
+    margin-bottom: 1rem;
+}
+
+.testimonial p {
+    font-size: 1rem;
+    color: var(--lily);
+}
+
+/* Footer */
+.footer {
+    background: linear-gradient(135deg, #2c2c2c, #555555); /* Gradiente grigio scuro a grigio più chiaro */
+    color: #f4f4f4; /* Colore chiaro per il testo */
+    padding: 40px 0; /* Aumento dello spazio */
+    text-align: center;
+    font-family: 'Georgia', serif; /* Font classico */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombra morbida per la profondità */
+    border-top: 2px solid #444444; /* Linea superiore per separare il footer dal contenuto */
+}
+
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/* Testo del footer */
+.footer p {
+    margin: 0; /* Rimuovi il margine dai paragrafi */
+    font-size: 16px; /* Dimensione del font leggermente ridotta */
+    color: #f4f4f4; /* Colore chiaro per il testo */
+    letter-spacing: 1px; /* Distanza tra le lettere per la leggibilità */
+}
+
+/* Link nel footer */
+.footer-link a {
+    color: #3498db; /* Colore dei link chiaro (blu) */
+    text-decoration: none; /* Rimuovi la sottolineatura */
+    font-weight: bold; /* Font più audace */
+    font-size: 14px; /* Dimensione del font più piccola */
+    letter-spacing: 1px; /* Distanza tra le lettere */
+    transition: color 0.3s ease, transform 0.3s ease, letter-spacing 0.3s ease; /* Transizioni per l'effetto hover */
+}
+
+.footer-link a:hover {
+    color: #3498db; /* Colore più scuro al passaggio del mouse */
+    transform: scale(1.1); /* Leggero ingrandimento del testo */
+    letter-spacing: 2px; /* Maggiore distanza tra le lettere al passaggio del mouse */
+}
+
+
+
+/* Main Content Styles */
+.testo-principale {
+    padding: 2rem;
+    background-color: #f4f4f4;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Ombra morbida ma non invadente */
+    border-radius: 12px;
+    max-width: 900px;
+    margin: 3rem auto;
+    text-align: center;
+    background-image: url('./assets/vintage-texture.png'); /* Texture vintage (opzionale) */
+    background-size: cover;
+    position: relative; /* Necessario per il posizionamento */
+}
+
+/* Title Styles */
+.section-title {
+    font-size: 3rem;
+    font-weight: 700;
+    color: #3F6634; /* Verde scuro per il titolo */
+    margin-bottom: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    padding-bottom: 1rem;
+    display: inline-block;
+    position: relative;
+}
+
+/* Text Styles */
+.section-text {
+    font-size: 1.125rem;
+    color: #345511; /* Verde scuro per il testo */
+    line-height: 1.8;
+    font-weight: 300;
+    margin-top: 1.5rem;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    letter-spacing: 0.5px; /* Piccola spaziatura per un look più elegante */
+}
+
+/* Rimuoviamo l'effetto hover e lo stile di illuminazione */
+.testo-principale:hover {
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Ombra morbida ma invariata */
+}
+
+.section-title:hover {
+    transform: none; /* Rimuoviamo il movimento del titolo */
+    color: #3F6634; /* Manteniamo il colore del titolo invariato */
+}
+
+.section-text:hover {
+    color: #345511; /* Manteniamo il colore del testo invariato */
+    transition: none; /* Rimuoviamo la transizione del colore */
+}
+
+@media (max-width: 992px) {
+    header.hero {
+        height: 50vh; /* Altezza ridotta dell'header per dispositivi mobili */
+    }
+
+    .hero .menu {
+        flex-direction: column;
+    }
+
+    .menu-item {
+        font-size: 1rem;
     }
 }
 
-@media (max-width: 768px){
-    h1{
-        font-size: 2.5rem;
-        line-height: 44px;
+@media (max-width: 768px) {
+    .nav .menu {
+        width: 80%;
     }
-    
-    h2{
+
+    header.hero {
+        height: 45vh;
+    }
+
+    .hero .logo a {
         font-size: 2rem;
-        line-height: 40px;
-    }
-   
-    h3{
-        font-size: 1.125rem;
-        line-height: 24px;
-    }
-    
-    .title-block{
-        margin-top: 0;
     }
 
-    .toggler{
-        opacity: 0;
-        z-index: 3;
-        display: block;
-        cursor: pointer;
-        width: 30px;
-        height: 10px;
-    }
-    
-    .hamburger{
-        position: absolute;
-        right: 0;
-        z-index: 2;
-        width: 30px;
-        height: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
+    .testo-principale {
+        padding: 1rem; /* Ridotto il padding sui dispositivi mobili */
     }
 
-    .hamburger > div{
-        position: relative;
-        width: 100%;
-        height: 3px;
-        background-color: var(--rupert);
+    .testo-principale h3 {
+        font-size: 1.8rem; /* Ridotto la dimensione del titolo sui dispositivi mobili */
     }
 
-    .hamburger > div:before{
-        content: "";
-        position: absolute;
-        top: -10px;
-        background-color: var(--rupert);
-        width: 100%;
-        height: 3px;
+    .testo-principale p {
+        font-size: 1rem; /* Ridotto la dimensione del testo sui dispositivi mobili */
     }
 
-    .toggler:checked{
-        height: 30px;
-    }
-
-    .toggler:checked + .hamburger > div{
-        transform: rotate(135deg);
-        position: absolute;
-        top: 0;
-    }
-
-    .toggler:checked + .hamburger > div:before{
-        transform: rotate(90deg) ;
-        top: 0;
-    }
-
-    .toggler:checked ~ .menu{
-        display: flex;
-        z-index: 1;
-    }
-
-    nav{
-        position: relative;
-    }
-
-    nav .menu{
-        position: fixed;
-        height: 100%;
-        width: 100vw;
-        display: none;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        top: 50%;
-        left: 50%;
-        background-color: white;
-        transform: translate(-50%, -50%);
+    .menu-item {
+        font-size: 1rem;
     }
 }
 
+@media (max-width: 480px) {
+    header.hero {
+        height: 40vh; /* Altezza ulteriormente ridotta per i dispositivi più piccoli */
+    }
 
+    .hero .logo a {
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        font-size: 14px;
+        padding: 20px 0;
+    }
+
+    .testo-principale {
+        padding: 1rem;
+        max-width: 100%;
+    }
+
+    .testo-principale h3 {
+        font-size: 1.6rem;
+    }
+
+    .testo-principale p {
+        font-size: 0.9rem;
+    }
+
+    .section-title {
+        font-size: 2.2rem;
+    }
+
+    .section-text {
+        font-size: 1rem;
+    }
+}
 
 
 /* PARTE CURIOSITAIN CSS*/
@@ -392,6 +706,7 @@ nav{
     flex-direction: column; /* Disposizione verticale delle immagini */
     align-items: center; /* Centra le immagini orizzontalmente */
     gap: 70px; /* Spazio tra le immagini */
+    position: relative;
 }
 
 /* Stile per le immagini */
@@ -408,4 +723,3 @@ nav{
     margin-bottom: 1%;
     letter-spacing: 3px; /* Aggiunge uno spazio leggero tra le lettere */
 }
-
